--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,3 +2,15 @@ spring:
   config:
     activate:
       on-profile: dev
+
+  h2:
+    console:
+      enabled: true
+      path: /h2
+
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: ${H2_URL}
+    username: mystagram
+    password:
+
