--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -3,6 +3,10 @@ spring:
     activate:
       on-profile: local
 
+  jpa:
+    hibernate:
+      ddl-auto: create
+
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: ${LOCAL_DB_URL}
